--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,17 @@
 	<title>WebDashboard</title>
 </head>
 <body>
-<div id="root"></div>
+<div id="root">
+	<!--<div class="pt-spinner pt-large">-->
+		<!--<div class="pt-spinner-svg-container">-->
+			<!--<svg viewBox="0 0 100 100">-->
+				<!--<path class="pt-spinner-track" d="M 50,50 m 0,-44.5 a 44.5,44.5 0 1 1 0,89 a 44.5,44.5 0 1 1 0,-89"></path>-->
+				<!--<path class="pt-spinner-head" d="M 94.5 50 A 44.5 44.5 0 0 0 50 5.5"></path>-->
+			<!--</svg>-->
+		<!--</div>-->
+	<!--</div>-->
+	<!--Connecting...-->
+</div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
